[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2efs"
version = "0.0.3"
authors = [
  { name="Brais Cancela", email="brais.cancela@udc.es" },
]
description = "E2E-FS Feature Selection Method"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

dependencies = [
  "tensorflow-macos; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "tensorflow; sys_platform != 'darwin' or platform_machine != 'arm64'",
  "packaging"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Homepage" = "https://github.com/braisCB/E2E-FS"
"Bug Tracker" = "https://github.com/braisCB/E2E-FS/issues"
